--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
+<p>Hello Wilber</p>
+<p>This is a test</p>
 
 </body>
 </html>
