--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
     <!--    <link rel="stylesheet" href="css/normalize.css">-->
 </head>
 <body>
-<div class="media">
+<blockquote class="quote">
+    <p class="quote__text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda doloremque dolores eos, et fugit
+        laudantium nesciunt sint suscipit voluptas.</p>
+    <footer>
+        <div class="media">
     <div class="media__image">
-        <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#snap"></use>
+        <svg class="icon icon--primary quote__line">
+            <use xlink:href="images/sprite.svg#line"></use>
         </svg>
     </div>
     <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias atque blanditiis, corporis deserunt eum
-            incidunt laboriosam minima nulla perferendis voluptas?</p>
+        <h3 class="media__title quote__author">Wilber Banos</h3>
+        <p class="quote__organization">Vivid Vectors</p>
     </div>
 </div>
+    </footer>
+</blockquote>
 </body>
 </html>
