Added Parcel for Building

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Moshify...">
     <meta property="og:description" content="Moshify...">
     <meta property="og:type" content="website...">
-    <meta property="og:image" content="http://...">
+<!--    <meta property="og:image" content="http://...">-->
     <meta property="og:url" content="https://www.moshified.com">
     <title>Moshify - Go online for just $9</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
