--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Moshify...">
     <meta property="og:description" content="Moshify...">
     <meta property="og:type" content="website...">
-<!--    <meta property="og:image" content="http://...">-->
+    <!--    <meta property="og:image" content="http://...">-->
     <meta property="og:url" content="https://www.moshified.com">
     <title>Moshify - Go online for just $9</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -390,8 +390,6 @@
 </footer>
 <script src="js/main.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-    AOS.init();
-</script>
+<script> AOS.init();</script>
 </body>
 </html>
